--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME	= scavTrap
-CC		= c++
-CFLAGS	= -Wall -Werror -Wextra -std=c++98
+CXX		= c++
+CXFLAGS	= -Wall -Werror -Wextra -std=c++98
 RM		= rm -f
 
 SRCS	=	./main.cpp \
@@ -12,10 +12,10 @@ OBJS	= $(SRCS:.cpp=.o)
 all	: $(NAME)
 
 $(NAME)	: $(OBJS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
+	$(CXX) $(CXFLAGS) -o $(NAME) $(OBJS)
 
 %.o : %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CXX) $(CXFLAGS) -c $< -o $@
 
 clean :
 	$(RM) *.o
